# telseq

./: .gitignore  README.md
src/: configure.ac  extract_telomeric_reads.sh  telomeric_regions_grch38.bed  telomeric_regions_grch38_nochr.bed
src/Telseq/: Makefile.am  telseq.cpp  telseq.h
